--- a/.github/workflows/infra-deployment.yml
+++ b/.github/workflows/infra-deployment.yml
@@ -2,11 +2,14 @@ name: AWS CDK Deployment
 
 on:
   push:
-    branches: [main]
+    branches: 
+      - main
+      - save
   
 jobs:
-  build-test:
+  deploy:
     runs-on: ubuntu-latest
+    environment: test
 
     steps:
       - name: Check out code
@@ -18,6 +21,7 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.AWS_ACCESS_SECRET }}
+          aws-session-token: ${{ secrets.AWS_ACCESS_TOKEN }}
         
       - name: Set up Python
         uses: actions/setup-python@v5
