--- a/.github/workflows/infra-deployment.yml
+++ b/.github/workflows/infra-deployment.yml
@@ -39,10 +39,14 @@ jobs:
       - name: Install Dependencies
         run: |
           cd source
-          python -m pip install --upgrade pip
+          python3 -m pip install --upgrade pip
           pip install -r requirements-poetry.txt
           poetry install
           npm install -g aws-cdk
+
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=home/runner/work/prebid-server-deployment-on-aws" >> $GITHUB_ENV
+        shell: bash
 
 
       - name: Run tests
