--- a/.github/workflows/infra-deployment.yml
+++ b/.github/workflows/infra-deployment.yml
@@ -42,8 +42,9 @@ jobs:
 
       - name: Install Dependencies
         run: |
+          cd source
           python -m pip install --upgrade pip
-          pip install -r ./source/requirements-poetry.txt
+          pip install -r requirements-poetry.txt
           python -m poetry config virtualenvs.in-project true
           poetry install 
           npm install -g aws-cdk
