--- a/.github/workflows/infra-deployment.yml
+++ b/.github/workflows/infra-deployment.yml
@@ -46,7 +46,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements-poetry.txt
           python -m poetry config virtualenvs.in-project true
-          poetry install 
+          python -m poetry install 
           npm install -g aws-cdk
 
 
