--- a/.github/workflows/infra-deployment.yml
+++ b/.github/workflows/infra-deployment.yml
@@ -40,14 +40,19 @@ jobs:
         with:
           node-version: "20"
 
+      - name: Install and configure Poetry
+        uses: snok/install-poetry@v1
+        with:
+          virtualenvs-create: "true"
+          virtualenvs-in-project: "true"
+          prefer-active-python: "true"
+
       - name: Install Dependencies
         run: |
           cd source
-          python -m pip install --upgrade pip
-          pip install -r requirements-poetry.txt
-          python -m poetry config virtualenvs.in-project true
-          python -m poetry install 
           npm install -g aws-cdk
+          poetry install
+
 
 
       - name: Run tests
