--- a/.github/workflows/infra-deployment.yml
+++ b/.github/workflows/infra-deployment.yml
@@ -43,17 +43,16 @@ jobs:
       - name: Install and configure Poetry
         uses: snok/install-poetry@v1
         with:
-          virtualenvs-create: "true"
-          virtualenvs-in-project: "true"
-          prefer-active-python: "true"
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+          virtualenvs-path: .venv
+          installer-parallel: true
 
       - name: Install Dependencies
         run: |
           cd source
           npm install -g aws-cdk
           poetry install
-
-
 
       - name: Run tests
         if: false
