--- a/.github/workflows/infra-deployment.yml
+++ b/.github/workflows/infra-deployment.yml
@@ -50,7 +50,6 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          source .venv/bin/activate
           cd source
           npm install -g aws-cdk
           poetry install
@@ -63,6 +62,7 @@ jobs:
       
       - name: Build 
         run: |
+          poetry install
           cd source/infrastructure
           cdk bootstrap --cloudformation-execution-policies arn:aws:iam::aws:policy/AdministratorAccess
           cdk synth
