--- a/.github/workflows/infra-deployment.yml
+++ b/.github/workflows/infra-deployment.yml
@@ -69,4 +69,6 @@ jobs:
           cdk synth
       
       - name: Deploy
-        run: cdk deploy
+        run: | 
+          cd source
+          cdk deploy
