--- a/.github/workflows/infra-deployment.yml
+++ b/.github/workflows/infra-deployment.yml
@@ -72,4 +72,4 @@ jobs:
         run: | 
           . $VENV
           cd infrastructure
-          cdk deploy
+          cdk deploy --require-approval never
