--- a/source/pyproject.toml
+++ b/source/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "prebid-server-deployment-on-aws"
+name = "longitude-s2s"
 version = "1.1.1"
 description = "Prebid Server Deployment on AWS - Easily deploy and operate a scalable Prebid Server for programmatic advertising auctions"
 license = "MIT"
