--- a/solution-manifest.yaml
+++ b/solution-manifest.yaml
@@ -1,5 +1,5 @@
 id: SO0248
-name: longitude-s2s
+name: prebid-server-deployment-on-aws
 version: v1.1.1
 cloudformation_templates:
   - template: prebid-server-deployment-on-aws.template
