Refactor: rename workflow from 'AWS CDK Deployment' to 'AWS CDK PR'

--- a/.github/workflows/infra-pr.yml
+++ b/.github/workflows/infra-pr.yml
@@ -1,4 +1,4 @@
-name: AWS CDK Deployment
+name: AWS CDK PR
 
 on:
   pull_request:
@@ -12,7 +12,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  deploy:
+  pr-test:
     runs-on: ubuntu-latest
 
     steps:
