--- a/.github/workflows/infra-pr.yml
+++ b/.github/workflows/infra-pr.yml
@@ -1,8 +1,8 @@
-name: AWS CDK Deployment
+name: AWS CDK PR
 
 on:
-  push:
-    branches: longitude
+  pull_request:
+    branches: [longitude]
 
 permissions:
   contents: read
@@ -12,7 +12,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  deploy:
+  pr-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -60,11 +60,3 @@ jobs:
           . $VENV
           cd infrastructure
           cdk synth
-      
-      - name: Deploy
-        working-directory: ./source
-
-        run: | 
-          . $VENV
-          cd infrastructure
-          cdk deploy --require-approval never
