--- a/deployment/ecr/prebid-server/docker-build-config.json
+++ b/deployment/ecr/prebid-server/docker-build-config.json
@@ -1,5 +1,5 @@
 {
+  "GIT_REPO": "https://github.com/Addkt/prebid-server-java.git",
   "GIT_TAG_VERSION": "3.22.0",
   "MVN_CLI_OPTIONS": "-Dmaven.test.skip"
 }
-
