--- a/.github/workflows/infra-deployment.yml
+++ b/.github/workflows/infra-deployment.yml
@@ -3,6 +3,7 @@ name: AWS CDK Deployment
 on:
   push:
     branches: longitude
+    paths: !deployment/ecr/prebid-server/current-config/**
 
 permissions:
   contents: read
@@ -14,11 +15,8 @@ concurrency:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Check out code
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with: 
@@ -26,7 +24,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.AWS_ACCESS_SECRET }}
           aws-session-token: ${{ secrets.AWS_ACCESS_TOKEN }}
-        
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
