--- a/.github/workflows/config-update.yml
+++ b/.github/workflows/config-update.yml
@@ -6,7 +6,9 @@ on:
     paths: deployment/ecr/prebid-server/current-config/**
 
   pull_request:
-    
+    branches: longitude
+    paths: deployment/ecr/prebid-server/current-config/**
+
 concurrency:
   group: ci-${{ github.ref }}
   cancel-in-progress: true
