Feat: add parameters for CloudFront and WAF installation in CDK deploy step

--- a/.github/workflows/infra-deployment.yml
+++ b/.github/workflows/infra-deployment.yml
@@ -65,4 +65,4 @@ jobs:
         run: | 
           . $VENV
           cd infrastructure
-          cdk deploy --require-approval never
+          cdk deploy --require-approval never --parameters InstallCloudFrontAndWAF=${{ vars.InstallCloudFrontAndWAF }}
