--- a/.github/workflows/config-update.yml
+++ b/.github/workflows/config-update.yml
@@ -1,6 +1,9 @@
 name: Update Prebid Config
 
 on:
+  pull_request:
+    branches: [longitude]
+
   push:
     branches: longitude
     paths: deployment/ecr/prebid-server/current-config/**
@@ -16,12 +19,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: aws-actions/configure-aws-credentials@v4
-        with: 
+        with:
           aws-region: ${{ secrets.AWS_REGION }}
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.AWS_ACCESS_SECRET }}
           aws-session-token: ${{ secrets.AWS_ACCESS_TOKEN }}
-        
+
       - name: Upload files
         run: aws s3 cp deployment/ecr/prebid-server/current-config/ ${{vars.AWS_CONFIG_BUCKET_PATH}} --recursive
 
