--- a/.github/workflows/config-update.yml
+++ b/.github/workflows/config-update.yml
@@ -3,6 +3,7 @@ name: Update Prebid Config
 on:
   pull_request:
     branches: [longitude]
+    paths: deployment/ecr/prebid-server/current-config/**
 
   push:
     branches: longitude
