--- a/.github/workflows/infra-pr.yml
+++ b/.github/workflows/infra-pr.yml
@@ -6,9 +6,9 @@ on:
 
 permissions:
   contents: read
-  
+
 concurrency:
-  group: ci-${{ github.ref }}
+  group: pr-test-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
@@ -21,21 +21,21 @@ jobs:
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
-        with: 
+        with:
           aws-region: ${{ secrets.AWS_REGION }}
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.AWS_ACCESS_SECRET }}
           aws-session-token: ${{ secrets.AWS_ACCESS_TOKEN }}
-        
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.13"
+          python-version: '3.13'
 
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: '20'
 
       - name: Install and configure Poetry
         uses: snok/install-poetry@v1
@@ -53,7 +53,7 @@ jobs:
       - name: Run tests
         working-directory: ./deployment
         run: bash ./run-unit-tests.sh --in-venv 1
-      
+
       - name: Build
         working-directory: ./source
         run: |
