--- a/.github/workflows/config-update.yml
+++ b/.github/workflows/config-update.yml
@@ -3,11 +3,13 @@ name: Update Prebid Config
 on:
   pull_request:
     branches: [longitude]
-    paths: deployment/ecr/prebid-server/current-config/**
+    paths:
+      - deployment/ecr/prebid-server/current-config/**
 
   push:
     branches: longitude
-    paths: deployment/ecr/prebid-server/current-config/**
+    paths:
+      - deployment/ecr/prebid-server/current-config/**
 
 concurrency:
   group: config-deployment-${{ github.ref }}
