--- a/.github/workflows/infra-deployment.yml
+++ b/.github/workflows/infra-deployment.yml
@@ -3,12 +3,14 @@ name: AWS CDK Deployment
 on:
   push:
     branches: longitude
+    paths:
+      - source/**
 
 permissions:
   contents: read
-  
+
 concurrency:
-  group: ci-${{ github.ref }}
+  group: infra-deployment-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
@@ -18,7 +20,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
-        with: 
+        with:
           aws-region: ${{ secrets.AWS_REGION }}
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.AWS_ACCESS_SECRET }}
@@ -27,12 +29,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.13"
+          python-version: '3.13'
 
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: '20'
 
       - name: Install and configure Poetry
         uses: snok/install-poetry@v1
@@ -50,18 +52,18 @@ jobs:
       - name: Run tests
         working-directory: ./deployment
         run: bash ./run-unit-tests.sh --in-venv 1
-      
+
       - name: Build
         working-directory: ./source
         run: |
           . $VENV
           cd infrastructure
           cdk synth
-      
+
       - name: Deploy
         working-directory: ./source
 
-        run: | 
+        run: |
           . $VENV
           cd infrastructure
           cdk deploy --require-approval never --parameters InstallCloudFrontAndWAF=${{ vars.InstallCloudFrontAndWAF }}
