Fix: set logging level for Prebid Server to INFO for improved log visibility

--- a/deployment/ecr/prebid-server/current-config/prebid-config.yaml
+++ b/deployment/ecr/prebid-server/current-config/prebid-config.yaml
@@ -165,6 +165,7 @@ admin-endpoints:
 logging:
   sampling-rate: 0.01
   level:
+    org.prebid.server.log: INFO
     root: ERROR # Set the default log level for all packages
   change-level:
     max-duration-ms: 3600000 # 1h
