Fix: enable sovrn and unruly adapters in Prebid Server configuration

--- a/deployment/ecr/prebid-server/current-config/prebid-config.yaml
+++ b/deployment/ecr/prebid-server/current-config/prebid-config.yaml
@@ -12,6 +12,11 @@ adapters:
     enabled: true
   medianet:
     enabled: true
+  sovrn:
+    enabled: true
+  unruly:
+    enabled: true
+  
 
   appnexus:
     enabled: true
