Fix: update account ID for solitairebliss in Prebid Server configuration

--- a/deployment/ecr/prebid-server/current-config/prebid-config.yaml
+++ b/deployment/ecr/prebid-server/current-config/prebid-config.yaml
@@ -121,8 +121,7 @@ settings:
     categories-dir:
 
 accounts:
-  # solitairebliss
-  - id: '213552'
+  - id: 'solitairebliss'
     adapters:
       ix:
         enabled: true
