add aliases for solitairebliss-ix adapter with endpoint configuration

--- a/deployment/ecr/prebid-server/current-config/prebid-config.yaml
+++ b/deployment/ecr/prebid-server/current-config/prebid-config.yaml
@@ -48,6 +48,11 @@ adapters:
     enabled: true
     endpoint: http://longitude-ads-us-east.lb.indexww.com/pbs?p=192251
 
+    aliases:
+      solitairebliss-ix:
+        enabled: true
+        endpoint: http://longitude-ads-us-east.lb.indexww.com/pbs?p=213552
+
   epsilon:
     enabled: true
 
