--- a/.github/workflows/config-update.yml
+++ b/.github/workflows/config-update.yml
@@ -2,7 +2,6 @@ name: Update Prebid Config
 
 on:
   push:
-    branches: longitude
     paths:
       - deployment/ecr/prebid-server/current-config/**
 
@@ -11,8 +10,9 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  deploy:
+  update-prebid-config:
     runs-on: ubuntu-latest
+    environment: ${{ github.ref_name }}
 
     steps:
       - uses: actions/checkout@v4
@@ -22,6 +22,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.AWS_ACCESS_SECRET }}
           aws-session-token: ${{ secrets.AWS_ACCESS_TOKEN }}
+
 
       - name: Upload files
         run: aws s3 cp deployment/ecr/prebid-server/current-config/ ${{vars.AWS_CONFIG_BUCKET_PATH}} --recursive
