--- a/.github/workflows/infra-update.yml
+++ b/.github/workflows/infra-update.yml
@@ -4,7 +4,7 @@ on:
     paths:
       - source/infrastructure/**
   
-  workflow_call:
+  workflow_dispatch:
       
 permissions:
   contents: read
