--- a/.github/workflows/infra-update.yml
+++ b/.github/workflows/infra-update.yml
@@ -61,7 +61,9 @@ jobs:
 
       - name: Bootstrap CDK if needed
         if: vars.AWS_CONFIG_BUCKET_PATH != ''
-        run: cdk bootstrap
+        run: |
+          cd infrastructure
+          cdk bootstrap
 
       - name: Deploy
         working-directory: ./source
