--- a/.github/workflows/infra-update.yml
+++ b/.github/workflows/infra-update.yml
@@ -61,8 +61,10 @@ jobs:
 
       - name: Bootstrap CDK if needed
         if: vars.AWS_CONFIG_BUCKET_PATH != ''
-        working-directory: ./source/infrastructure
-        run: cdk bootstrap
+        working-directory: ./source
+        run: |
+          cd infrastructure
+          cdk bootstrap
 
       - name: Deploy
         working-directory: ./source
