--- a/.github/workflows/config-update.yml
+++ b/.github/workflows/config-update.yml
@@ -2,7 +2,6 @@ name: Update Prebid Config
 
 on:
   push:
-    branches: longitude
     paths:
       - deployment/ecr/prebid-server/current-config/**
 
@@ -10,9 +9,13 @@ concurrency:
   group: config-deployment-${{ github.ref }}
   cancel-in-progress: true
 
+permissions: 
+  id-token: write
+
 jobs:
-  deploy:
+  update-prebid-config:
     runs-on: ubuntu-latest
+    environment: ${{ github.ref_name }}
 
     steps:
       - uses: actions/checkout@v4
@@ -22,6 +25,9 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.AWS_ACCESS_SECRET }}
           aws-session-token: ${{ secrets.AWS_ACCESS_TOKEN }}
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_ROLE }}
+          role-session-name: GitHubActionsSession
+
 
       - name: Upload files
         run: aws s3 cp deployment/ecr/prebid-server/current-config/ ${{vars.AWS_CONFIG_BUCKET_PATH}} --recursive
