--- a/.github/workflows/infra-update.yml
+++ b/.github/workflows/infra-update.yml
@@ -23,6 +23,9 @@ jobs:
         with:
           aws-region: ${{ secrets.AWS_REGION }}
           role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_ROLE }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_ACCESS_SECRET }}
+          aws-session-token: ${{ secrets.AWS_ACCESS_TOKEN }}
           role-session-name: GitHubActionsSession
 
       - name: Set up Python
