--- a/deployment/ecr/prebid-server/current-config/prebid-config.yaml
+++ b/deployment/ecr/prebid-server/current-config/prebid-config.yaml
@@ -46,7 +46,7 @@ adapters:
 
   ix:
     enabled: true
-    endpoint: http://unwindmedia-us-east.lb.indexww.com/pbs?p=213552
+    endpoint: http://longitude-ads-us-east.lb.indexww.com/pbs?p=192251
 
   epsilon:
     enabled: true
