add yahooAds adapter to current-config

--- a/deployment/ecr/prebid-server/current-config/prebid-config.yaml
+++ b/deployment/ecr/prebid-server/current-config/prebid-config.yaml
@@ -8,6 +8,10 @@ analytics:
     enabled: true
 
 adapters:
+  gumgum:
+    enabled: true
+  yahooAds:
+    enabled: true
   ogury:
     enabled: true
   medianet:
