--- a/source/pyproject.toml
+++ b/source/pyproject.toml
@@ -20,6 +20,8 @@ pyparsing = "*"
 url_normalize = "*"
 docker = "*"
 cryptography = ">=44.0.1"
+urllib3 = ">=2.5.0"
+requests = ">=2.32.4"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "*"
