--- a/.github/workflows/infra-update.yml
+++ b/.github/workflows/infra-update.yml
@@ -21,9 +21,8 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-region: ${{ secrets.AWS_REGION }}
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.AWS_ACCESS_SECRET }}
-          aws-session-token: ${{ secrets.AWS_ACCESS_TOKEN }}
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_ROLE }}
+          role-session-name: GitHubActionsSession
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -53,7 +52,7 @@ jobs:
         run: bash ./run-unit-tests.sh --in-venv 1
 
       - name: Bootstrap CDK if needed
-        if: vars.AWS_CONFIG_BUCKET_PATH != ''
+        if: ${{ vars.AWS_CONFIG_BUCKET_PATH != '' }}
         working-directory: ./source
         run: |
           . $VENV
